--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@ layout: compress
                 {{ content }}
             </section>
         {% include footer.html %}
+        {% include script.html %}
     </body>
 </html>
